<resources>
    <string name="app_name">Class Schedule</string>
    <string name="please_login">Please Login</string>
    <string name="login">Login</string>
    <string name="lock_screen_enabled">Lock screen must be enabled in settings</string>
    <string name="fingerprint_permission_prompt">Fingerprint permission not enabled</string>
    <string name="cancelled">Cancelled</string>
    <string name="auth_error">"Authentication Error "</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="course_title">Course Title</string>
    <string name="example_date">01/01/2001</string>
    <string name="select_end_date">Select End Date</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="example_email">instructor@course.edu</string>
    <string name="course_complete">Course Complete:</string>
    <string name="notes_hint">Notes…</string>
    <string name="assessments">Assessments:</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="save_course">SAVE COURSE</string>
    <string name="delete_course">DELETE COURSE</string>
    <string name="add_course">Add Course…</string>
    <string name="assessment_title">Assessment Title</string>
    <string name="written_assessment">Written Assessment</string>
    <string name="oral_assessment">Oral Assessment</string>
    <string name="note">Note...</string>
    <string name="example_instructor_name">Instructor Name</string>
    <string name="example_combo_date">1/1/2021 - 1/2/2022</string>
    <string name="example_course_title">Course Title</string>
    <string name="sample_note_assessment_text">This is a sample note text. Hopefully, a student will not have too much to say here.</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="security_settings">Lock Screen must be enabled in order to use this app. If you have not done so, please create a pin code from the security settings.</string>
    <string name="settings_icon">Settings Icon</string>
</resources>